Expose java.nio module